# internal/adapter/http/routes.go
@@ -14,6 +14,7 @@ func RegisterRoutes(r *gin.Engine, healthHandler *handlers.HealthHandler, taskHa
 		api.GET("/health", healthHandler.CheckHealth)
 		api.GET("/health/report", healthHandler.CheckHealthReport)
 		api.POST("/tasks", taskHandler.CreateTask)
+		api.PATCH("/tasks/:id", taskHandler.UpdateTask)
 		api.GET("/tasks", taskHandler.ListRootTasks)
 		api.GET("/tasks/:id/subtasks", taskHandler.ListRootSubTasks)
 	}
